--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -27,6 +27,10 @@
   "game_start_error_notEnoughRoles": ":busts_in_silhouette: Not enough roles to start the game!",
   "game_started_button_endGame": "End Game",
   "game_started_title": "Game Started",
+  "game_started_private_yourRole": "Your Role",
+  "game_started_private_gameInfo": "Game Info:",
+  "game_started_private_theme": "Theme",
+  "game_started_private_playerCount": "Player Count",
   "game_end_error_noAccess": ":man_gesturing_no: Sorry, you can't end this game because you aren't its host!",
   "game_end_success_message": "The game was ended. But you can always create a new one!",
   "game_end_success_privateMessage": "The game was ended by its host. But you can create another one!",
@@ -40,10 +44,6 @@
   "game_edit_button_votes_hide": "Hide Votes",
   "game_edit_button_votes_notHide" : "Don't Hide Votes",
   "game_edit_success_message": ":white_check_mark: The game was successfully edited!",
-  "start_your_role": "Your role",
-  "start_game_info": "Game info:",
-  "start_theme": "Theme",
-  "start_player_count": "Player count",
 
 
   "wake_up_title": "The city wakes up!",
@@ -54,22 +54,28 @@
   "kills_description_one": "fell victim to iniquity.",
   "kills_description_many": "fell victim to iniquity.",
   "no_kills_title": "Nobody died!",
-  "no_kills_description": "Nobody was killed last night! Perhaps you should thank the doctor?\uD83D\uDE2F",
+  "no_kills_description": "Nobody was killed last night! Perhaps you should thank the doctor? \uD83D\uDE2F",
 
   "role_select_error_notFound": ":jigsaw: Player not found!",
   "role_select_error_invalidSelection": ":man_gesturing_no: Invalid selection!",
+  "role_select_error_noActivity": ":man_gesturing_no: You must sleep at night!",
+  "role_select_success_message1": ":ok_hand: You have successfully selected ",
+  "role_select_success_message2": ".",
+  "role_vote_select_success_message1": ":ballot_box: You have successfully voted for ",
+  "role_vote_select_success_message2": ".",
   "role_vote_select_placeHolder": "Select who you want to vote against...",
   "role_vote_results_title": "Voting results",
   "role_vote_results_tie": ":man_shrugging: Tie vote",
-  "role_vote_results_ban": " was banned from the city.",
+  "role_vote_results_ban1": ":x: ",
+  "role_vote_results_ban2": " was banned from the city.",
+  "role_peaceful_name": "Innocent",
+  "role_peaceful_description": "%Your goal is to save the city from criminals!\n:scales:  Reveal the identities of the villains and achieve their ban from the city.\n:trophy:  The innocents win if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Select your victim...",
   "role_mafia_description": "%KILL AND SURVIVE!\n:skull_crossbones:  Every night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\n:trophy:  The mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  Your teammates: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Maniac",
   "role_killer_placeHolder": "Select your victim...",
   "role_killer_description": "%KILL EVERYONE AND SURVIVE!\n:axe:  Once every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\n:trophy:  You win if no more than one player besides you remains in the city. Spare nobody!%",
-  "role_peaceful_name": "Innocent",
-  "role_peaceful_description": "%Your goal is to save the city from criminals!\n:scales:  Reveal the identities of the villains and achieve their ban from the city.\n:trophy:  The innocents win if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
   "role_doctor_name": "Doctor",
   "role_doctor_placeHolder": "Select who you want to heal...",
   "role_doctor_description": "%You save people's lives! :heart:\n:pill:  Every night you heal one player. If this player is chosen by the criminals, he or she will stay alive.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
@@ -79,6 +85,13 @@
   "role_mistress_name": "Fancy woman",
   "role_mistress_placeHolder": "Select who you want to visit...",
   "role_mistress_description": "%You bring love to this world! And what is love — who knows... :kiss:\n:strawberry:  Every night you visit one of the players. The next day, this player can't be voted out.\n:trophy:  You win with the innocents if there are no murderers left in the city. :exclamation: Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
+  "role_check_reply_mafia1": ":skull_crossbones: ",
+  "role_check_reply_mafia2": " belongs to the mafia!",
+  "role_check_reply_notMafia1": ":negative_squared_cross_mark: ",
+  "role_check_reply_notMafia2": " doesn't belong to the mafia.",
+  "role_fullCheck_reply1": "",
+  "role_fullCheck_reply2": "'s role is ",
+  "role_fullCheck_reply3": ".",
 
   "condition_mafiaWin_name": "Mafia victory condition",
   "condition_mafiaWin_WinEmbedTitle": "The mafia has won!",
@@ -92,7 +105,7 @@
 
   "role_embed_action_name": "Action",
   "role_embed_groupDec_name": "Does play in a group?",
-  "role_embed_spawnFrom_name": "Minimal number of players to spawn",
+  "role_embed_spawnFrom_name": "Minimal player count to spawn",
   "role_embed_selfSelectable_name": "Is self selectable?",
   "role_embed_count_name": "Count",
   "role_embed_placeHolder_name": "Placeholder for the action menu",
@@ -102,18 +115,27 @@
   "condition_embed_embedDescription_name": "Description",
   "condition_embed_winRole_name": "Winning role",
 
-  "profile_error_noProfile": ":jigsaw: This user doesn't have a Mafia account.",
+  "profile_error_noProfile1": ":jigsaw: ",
+  "profile_error_noProfile2": " doesn't have a Mafia account.",
   "profile_title": "Your profile :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Mafia account since:",
   "profile_accountSince": "Account since:",
   "profile_totalGames": ":video_game: Total Games:",
   "profile_totalWins": ":trophy: Total Wins:",
   "profile_premium": ":dollar: Premium:",
-  "profile_premium_purchased": "purchased",
-  "profile_premium_notPurchased": "not purchased",
+  "profile_premium_purchased": "active",
+  "profile_premium_notPurchased": "inactive",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Custom",
   "profile_button_news": "News Notifications",
+
+
+  "premium_title": "Premium :money_with_wings:",
+  "premium_description": ":zap: Create **custom roles** with unique features, such as action, game style, description and thumbnail!\n:dizzy: Create **custom game end conditions** to describe gaming with your roles or to change the default!\n:fire: Create **custom games** with your roles and conditions and **impress your friends**!\n:sparkling_heart: **Support us** in improving Mafia bot, adding new features and a lot more!\nSubscribe for just `$1/month`",
+  "premium_howDoIGet_name": ":gem: How do I get Premium?",
+  "premium_howDoIGet_value": "1. Join the official Mafia server: https://discord.gg/ZWnx8rqGTD\n2. Join Mafia Bot Premium on Patreon: https://www.patreon.com/MafiaBot775\n3. Link your Discord account to Patreon.\n4. Wait a bit and enjoy :3",
+  "premium_faq_name": ":question: FAQ",
+  "premium_faq_value": ":small_orange_diamond: What should I do if I didn't get Premium after subscribing?\n:small_blue_diamond: Just send a direct message to one of our developers or *message to support* with a dedicated button in the help.\n:small_orange_diamond: How do I link my Discord account to Patreon?\n:small_blue_diamond: See a Patreon article: https://support.patreon.com/hc/en-us/articles/212052266-Getting-Discord-access\n:small_orange_diamond: How do I cancel the subscription and what happens then?\n:small_blue_diamond: See a Patreon article: https://support.patreon.com/hc/en-us/articles/360005502572-How-do-I-cancel-\nAfter cancelling the subscription you will be able to continue enjoying all Premium benefits until the end of the paid period. After that you will no longer be able to create, edit and use custom roles and conditions, but your already created roles and conditions will be preserved. You will be able to restore the subscription and continue using them at any time.",
 
   "custom_button_createrole": "Create Role",
   "custom_button_editrole": "Edit Role",
@@ -154,8 +176,8 @@
   "role_create_roleSelectable_placeHolder": "true | false",
   "role_create_roleDelay_label": "Delay between actions",
   "role_create_roleDelay_placeHolder": "a delay between your role's actions in days",
-  "role_create_roleSpawnFrom_label": "Minimal count of players to spawn",
-  "role_create_roleSpawnFrom_placeHolder": "a minimal count of players for your role to spawn",
+  "role_create_roleSpawnFrom_label": "Minimal player count to spawn",
+  "role_create_roleSpawnFrom_placeHolder": "a minimal player count for your role to spawn",
   "role_create_roleGroupSelection_label": "Does play in a group?",
   "role_create_roleGroupSelection_placeHolder": "true | false",
   "role_create_success_message": ":white_check_mark: The role was successfully created:",
@@ -174,7 +196,7 @@
   "role_edit_selectField_roleAction_label": "Action",
   "role_edit_selectField_roleSelectable_label": "Is self selectable?",
   "role_edit_selectField_roleDelay_label": "Delay between actions",
-  "role_edit_selectField_roleSpawnFrom_label": "Minimal count of players to spawn",
+  "role_edit_selectField_roleSpawnFrom_label": "Minimal player count to spawn",
   "role_edit_selectField_roleGroupSelection_label": "Does play in a group?",
   "role_edit_title": "Role Editing: ",
   "role_edit_roleName_label": "Name",
@@ -193,8 +215,8 @@
   "role_edit_roleSelectable_placeHolder": "true | false",
   "role_edit_roleDelay_label": "Delay between actions",
   "role_edit_roleDelay_placeHolder": "a new delay between your role's actions in days",
-  "role_edit_roleSpawnFrom_label": "Minimal count of players to spawn",
-  "role_edit_roleSpawnFrom_placeHolder": "a new minimal count of players for your role to spawn",
+  "role_edit_roleSpawnFrom_label": "Minimal player count to spawn",
+  "role_edit_roleSpawnFrom_placeHolder": "a new minimal player count for your role to spawn",
   "role_edit_roleGroupSelection_label": "Does play in a group?",
   "role_edit_roleGroupSelection_placeHolder": "true | false",
   "role_edit_success_message": ":white_check_mark: The role was successfully edited:",
