--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -27,6 +27,10 @@
   "game_start_error_notEnoughRoles": ":busts_in_silhouette: Недостаточно ролей для начала игры!",
   "game_started_button_endGame": "Закончить игру",
   "game_started_title": "Игра начата",
+  "game_started_private_yourRole": "Ваша роль",
+  "game_started_private_gameInfo": "Информация про игру:",
+  "game_started_private_theme": "Тема",
+  "game_started_private_playerCount": "Количество игроков",
   "game_end_error_noAccess": ":man_gesturing_no: Извините, вы не можете закончить эту игру, потому что не являетесь её организатором!",
   "game_end_success_message": "Игра закончена. Но всегда можно создать новую!",
   "game_end_success_privateMessage": "Игра закончена организатором. Но вы можете создать другую!",
@@ -40,10 +44,6 @@
   "game_edit_button_votes_hide": "Скрывать голоса",
   "game_edit_button_votes_notHide" : "Не скрывать голоса",
   "game_edit_success_message": ":white_check_mark: Игра успешно изменена!",
-  "start_your_role": "Ваша роль",
-  "start_game_info": "Игровая информация:",
-  "start_theme": "Тема",
-  "start_player_count": "Кол-во игроков",
 
 
   "wake_up_title": "Город просыпается!",
@@ -58,18 +58,24 @@
 
   "role_select_error_notFound": ":jigsaw: Игрок не найден!",
   "role_select_error_invalidSelection": ":man_gesturing_no: Недопустимый выбор!",
+  "role_select_error_noActivity": ":man_gesturing_no: Вы должны спать ночью!",
+  "role_select_success_message1": ":ok_hand: Вы успешно выбрали ",
+  "role_select_success_message2": ".",
+  "role_vote_select_success_message1": ":ballot_box: Вы успешно проголосовали за ",
+  "role_vote_select_success_message2": ".",
   "role_vote_select_placeHolder": "Выберите, против кого хотите проголосовать...",
   "role_vote_results_title": "Результаты голосования",
   "role_vote_results_tie": ":man_shrugging: Стол попилили",
-  "role_vote_results_ban": " изгнан из города.",
+  "role_vote_results_ban1": ":x: ",
+  "role_vote_results_ban2": " изгнан из города.",
+  "role_peaceful_name": "Мирный",
+  "role_peaceful_description": "%Ваша цель — защитить город от преступников!\n:scales:  Раскройте личности злодеев и добейтесь их изгнания из города.\n:trophy:  Мирные побеждают, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_mafia_name": "Мафия",
   "role_mafia_placeHolder": "Выберите жертву...",
   "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ!\n:skull_crossbones:  Каждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\n:trophy:  Мафия побеждает, если составляет не менее половины всех активных игроков.% + ({r:maniac:count} > 0 ? % Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк..% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  С вами в команде: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Маньяк",
   "role_killer_placeHolder": "Выберите жертву...",
   "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ!\n:axe:  Раз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\n:trophy:  Вы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
-  "role_peaceful_name": "Мирный",
-  "role_peaceful_description": "%Ваша цель — защитить город от преступников!\n:scales:  Раскройте личности злодеев и добейтесь их изгнания из города.\n:trophy:  Мирные побеждают, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Выберите, кого хотите вылечить...",
   "role_doctor_description": "%Вы спасаете жизни людей! :heart:\n:pill:  Каждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\n:trophy:  Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
@@ -79,6 +85,13 @@
   "role_mistress_name": "Ночная бабочка",
   "role_mistress_placeHolder": "Выберите, к кому хотите наведаться...",
   "role_mistress_description": "%Вы несёте любовь в этот мир! А что есть любовь — кто знает... :kiss:\n:strawberry:  Каждую ночь вы наведываетесь к одному из игроков. На следующий день этот игрок не может быть изгнан голосованием.\n:trophy:  Вы побеждаете вместе с мирными, если в городе не остаётся убийц. :exclamation: Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_check_reply_mafia1": ":skull_crossbones: ",
+  "role_check_reply_mafia2": " принадлежит к мафии!",
+  "role_check_reply_notMafia1": ":negative_squared_cross_mark: ",
+  "role_check_reply_notMafia2": " не принадлежит к мафии.",
+  "role_fullCheck_reply1": "Роль ",
+  "role_fullCheck_reply2": " — ",
+  "role_fullCheck_reply3": ".",
 
   "condition_mafiaWin_name": "Условие победы мафии",
   "condition_mafiaWin_WinEmbedTitle": "Мафия победила!",
@@ -102,18 +115,27 @@
   "condition_embed_embedDescription_name": "Описание",
   "condition_embed_winRole_name": "Роль, которая побеждает",
 
-  "profile_error_noProfile": ":jigsaw: У этого пользователя нет аккаунта в «Мафии».",
+  "profile_error_noProfile1": ":jigsaw: У ",
+  "profile_error_noProfile2": " нет аккаунта Mafia.",
   "profile_title": "Ваш профиль :bust_in_silhouette:",
-  "profile_mafiaAccountSince": "Аккаунт в «Мафии» с:",
+  "profile_mafiaAccountSince": "Аккаунт Mafia с:",
   "profile_accountSince": "Аккаунт с:",
   "profile_totalGames": ":video_game: Всего игр:",
   "profile_totalWins": ":trophy: Всего побед:",
   "profile_premium": ":dollar: Premium:",
-  "profile_premium_purchased": "приобретён",
-  "profile_premium_notPurchased": "не приобретён",
+  "profile_premium_purchased": "активен",
+  "profile_premium_notPurchased": "неактивен",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Кастомизация",
   "profile_button_news": "Уведомления о новостях",
+
+
+  "premium_title": "Premium :money_with_wings:",
+  "premium_description": ":zap: Создавайте **собственные роли** с уникальными особенностями, такими как действие, стиль игры, описание и миниатюра!\n:dizzy: Создавайте **собственные условия окончания игры** для описания игры с вашими ролями или изменения стандартной!\n:fire: Создавайте **собственные игры** с вашими ролями и условиями и **поразите ваших друзей**!\n:sparkling_heart: **Поддержите нас** в улучшении Mafia bot, добавлении новых функций и многом другом!\nПодпишитесь всего за `1$/месяц`",
+  "premium_howDoIGet_name": ":gem: Как мне получить Premium?",
+  "premium_howDoIGet_value": "1. Присоединитесь к официальному серверу Mafia: https://discord.gg/ZWnx8rqGTD\n2. Подпишитесь на Mafia Bot Premium на Patreon: https://www.patreon.com/MafiaBot775\n3. Свяжите свои аккаунты Discord и Patreon.\n4. Подождите немного и наслаждайтесь :3",
+  "premium_faq_name": ":question: ЧЗВ",
+  "premium_faq_value": ":small_orange_diamond: Что делать, если я не получил Premium после подписки?\n:small_blue_diamond: Просто отправьте личное сообщение одному из наших разработчиков или *напишите в поддержку* с помощью специальной кнопки в справке.\n:small_orange_diamond: Как мне связать аккаунты Discord и Patreon?\n:small_blue_diamond: Прочтите статью Patreon: https://support.patreon.com/hc/ru/articles/212052266-Getting-Discord-access\n:small_orange_diamond: Как мне отменить подписку и что произойдёт после этого?\n:small_blue_diamond: Прочтите статью Patreon: https://support.patreon.com/hc/ru/articles/360005502572-How-do-I-cancel-\nПосле отмены подписки вы сможете продолжать наслаждаться всеми преимуществами Premium до конца оплаченного периода. После этого вы потеряете возможность создавать, изменять и использовать собственные роли и условия, но уже созданные роли и условия будут сохранены. Вы сможете восстановить подписку и продолжить использовать их в любой момент.",
 
   "custom_button_createrole": "Создать роль",
   "custom_button_editrole": "Изменить роль",
