--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -27,6 +27,10 @@
   "game_start_error_notEnoughRoles": ":busts_in_silhouette: Недостатньо ролей для початку гри!",
   "game_started_button_endGame": "Закінчити гру",
   "game_started_title": "Гру почато",
+  "game_started_private_yourRole": "Ваша роль",
+  "game_started_private_gameInfo": "Інформація про гру:",
+  "game_started_private_theme": "Тема",
+  "game_started_private_playerCount": "Кількість гравців",
   "game_end_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете закінчити цю гру, бо не є її організатором!",
   "game_end_success_message": "Гру закінчено. Але завжди можна створити іншу!",
   "game_end_success_privateMessage": "Гру закінчено організатором. Але ви можете створити іншу!",
@@ -40,10 +44,6 @@
   "game_edit_button_votes_hide": "Приховувати голоси",
   "game_edit_button_votes_notHide" : "Не приховувати голоси",
   "game_edit_success_message": ":white_check_mark: Гру успішно змінено!",
-  "start_your_role": "Ваша роль",
-  "start_game_info": "Інформація:",
-  "start_theme": "Тема",
-  "start_player_count": "Кількість гравців",
 
 
   "wake_up_title": "Місто прокидається!",
@@ -58,18 +58,24 @@
 
   "role_select_error_notFound": ":jigsaw: Гравця не знайдено!",
   "role_select_error_invalidSelection": ":man_gesturing_no: Неприпустимий вибір!",
+  "role_select_error_noActivity": ":man_gesturing_no: Ви маєте спати вночі!",
+  "role_select_success_message1": ":ok_hand: Ви успішно обрали ",
+  "role_select_success_message2": ".",
+  "role_vote_select_success_message1": ":ballot_box: Ви успішно проголосували за ",
+  "role_vote_select_success_message2": ".",
   "role_vote_select_placeHolder": "Оберіть, проти кого хочете проголосувати...",
   "role_vote_results_title": "Результати голосування",
   "role_vote_results_tie": ":man_shrugging: Стіл поділено",
-  "role_vote_results_ban": " вигнано з міста.",
+  "role_vote_results_ban1": ":x: ",
+  "role_vote_results_ban2": " вигнано з міста.",
+  "role_peaceful_name": "Мирний",
+  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців!\n:scales:  Розкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\n:trophy:  Мирні перемагають, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_mafia_name": "Мафія",
   "role_mafia_placeHolder": "Оберіть жертву...",
   "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ!\n:skull_crossbones:  Щоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\n:trophy:  Мафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  З вами в команді: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Маніяк",
   "role_killer_placeHolder": "Оберіть жертву...",
   "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ!\n:axe:  Раз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\n:trophy:  Ви перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
-  "role_peaceful_name": "Мирний",
-  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців!\n:scales:  Розкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\n:trophy:  Мирні перемагають, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_doctor_name": "Доктор",
   "role_doctor_placeHolder": "Оберіть, кого хочете вилікувати...",
   "role_doctor_description": "%Ви рятуєте життя людей! :heart:\n:pill:  Щоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\n:trophy:  Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
@@ -79,6 +85,13 @@
   "role_mistress_name": "Повія",
   "role_mistress_placeHolder": "Оберіть, до кого хочете навідатися...",
   "role_mistress_description": "%Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\n:strawberry:  Щоночі ви навідуєтеся до одного з гравців. Наступного дня цей гравець не може бути вигнаний голосуванням.\n:trophy:  Ви перемагаєте разом із мирними, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_check_reply_mafia1": ":skull_crossbones: ",
+  "role_check_reply_mafia2": " належить до мафії!",
+  "role_check_reply_notMafia1": ":negative_squared_cross_mark: ",
+  "role_check_reply_notMafia2": " не належить до мафії.",
+  "role_fullCheck_reply1": "Роль ",
+  "role_fullCheck_reply2": " — ",
+  "role_fullCheck_reply3": ".",
 
   "condition_mafiaWin_name": "Умова перемоги мафії",
   "condition_mafiaWin_WinEmbedTitle": "Мафія перемогла!",
@@ -102,18 +115,27 @@
   "condition_embed_embedDescription_name": "Опис",
   "condition_embed_winRole_name": "Роль, що перемагає",
 
-  "profile_error_noProfile": ":jigsaw: Цей користувач не має акаунта в «Мафії».",
+  "profile_error_noProfile1": ":jigsaw: ",
+  "profile_error_noProfile2": " не має акаунта Mafia.",
   "profile_title": "Ваш профіль :bust_in_silhouette:",
-  "profile_mafiaAccountSince": "Акаунт у «Мафії» з:",
+  "profile_mafiaAccountSince": "Акаунт Mafia з:",
   "profile_accountSince": "Акаунт з:",
   "profile_totalGames": ":video_game: Усього ігор:",
   "profile_totalWins": ":trophy: Усього перемог:",
   "profile_premium": ":dollar: Premium:",
-  "profile_premium_purchased": "придбано",
-  "profile_premium_notPurchased": "не придбано",
+  "profile_premium_purchased": "активний",
+  "profile_premium_notPurchased": "неактивнийй",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Кастомізація",
   "profile_button_news": "Сповіщення про новини",
+
+
+  "premium_title": "Premium :money_with_wings:",
+  "premium_description": ":zap: Створюйте **власні ролі** з унікальними особливостями, як-от дія, стиль гри, опис та мініатюра!\n:dizzy: Створюйте **власні умови завершення гри** для опису гри з вашими ролями чи зміни типової!\n:fire: Створюйте **власні ігри** з вашими ролями й умовами та **вражайте ваших друзів**!\n:sparkling_heart: **Підтримайте нас** у вдосконаленні Mafia bot, додаванні нових функцій і купі іншого!\nПідпишіться всього за `1$/місяць`",
+  "premium_howDoIGet_name": ":gem: Як мені отримати Premium?",
+  "premium_howDoIGet_value": "1. Приєднайтеся до офіційного сервера Mafia: https://discord.gg/ZWnx8rqGTD\n2. Приєднайтеся до Mafia Bot Premium на Patreon: https://www.patreon.com/MafiaBot775\n3. Прив'яжіть свій акаунт Discord до Patreon.\n4. Трохи зачекайте та насолоджуйтеся :3",
+  "premium_faq_name": ":question: ЧаП",
+  "premium_faq_value": ":small_orange_diamond: Що робити, якщо я не отримав Premium після підписки?\n:small_blue_diamond: Просто надішліть приватне повідомлення одному з наших розробників або *напишіть до підтримки* за допомогою спеціальної кнопки в довідці.\n:small_orange_diamond: Як мені прив'язати акаунт Discord до Patreon?\n:small_blue_diamond: Прочитайте статтю Patreon: https://support.patreon.com/hc/uk-ua/articles/212052266-Getting-Discord-access\n:small_orange_diamond: Як мені скасувати підписку та що відбудеться після цього?\n:small_blue_diamond: Прочитайте статтю Patreon: https://support.patreon.com/hc/uk-ua/articles/360005502572-How-do-I-cancel-\nПісля скасування підписки ви зможете продовжувати насолоджуватися всіма перевагами Premium до кінця оплаченого періоду. Після цього ви втратите можливість створювати, змінювати та використовувати власні ролі та умови, але вже створені ролі та умови буде збережено. Ви зможете відновити підписку та продовжити використовувати їх у будь-який момент.",
 
   "custom_button_createrole": "Створити роль",
   "custom_button_editrole": "Змінити роль",
