--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -11,7 +11,7 @@
   "game_created_votes": "Hide Votes",
   "game_created_playerList": "Player List",
   "game_created_roles": "Roles:",
-  "game_created_gameEndConditions": "Game End Conditions:",
+  "game_created_gameEndConditions": "End Game Conditions:",
   "game_created_button_join": "ㅤㅤㅤJoinㅤㅤㅤ",
   "game_created_button_start": "ㅤㅤStartㅤ",
   "game_created_button_cancel": "ㅤㅤCancelㅤㅤ",
@@ -40,7 +40,7 @@
   "game_leave_success_message": ":ballot_box_with_check: You have successfully left the game.",
   "game_edit_error_noAccess": ":man_gesturing_no: Sorry, you can't edit this game because you aren't its host!",
   "game_edit_roles_placeHolder": "Select roles...",
-  "game_edit_conditions_placeHolder": "Select game end conditions...",
+  "game_edit_conditions_placeHolder": "Select end game conditions...",
   "game_edit_button_votes_hide": "Hide Votes",
   "game_edit_button_votes_notHide" : "Don't Hide Votes",
   "game_edit_success_message": ":white_check_mark: The game was successfully edited!",
@@ -131,7 +131,7 @@
 
 
   "premium_title": "Premium :money_with_wings:",
-  "premium_description": ":zap: Create **custom roles** with unique features, such as action, game style, description and thumbnail!\n:dizzy: Create **custom game end conditions** to describe gaming with your roles or to change the default!\n:fire: Create **custom games** with your roles and conditions and **impress your friends**!\n:sparkling_heart: **Support us** in improving Mafia bot, adding new features and a lot more!\nSubscribe for just `$1/month`",
+  "premium_description": ":zap: Create **custom roles** with unique features, such as action, game style, description and thumbnail!\n:dizzy: Create **custom end game conditions** to describe gaming with your roles or to change the default!\n:fire: Create **custom games** with your roles and conditions and **impress your friends**!\n:sparkling_heart: **Support us** in improving Mafia bot, adding new features and a lot more!\nSubscribe for just `$1/month`",
   "premium_howDoIGet_name": ":gem: How do I get Premium?",
   "premium_howDoIGet_value": "1. Join the official Mafia server: https://discord.gg/ZWnx8rqGTD\n2. Join Mafia Bot Premium on Patreon: https://www.patreon.com/MafiaBot775\n3. Link your Discord account to Patreon.\n4. Wait a bit and enjoy :3",
   "premium_faq_name": ":question: FAQ",
@@ -284,6 +284,17 @@
   "news_error_noAccess_disabled": ":man_gesturing_no: You can't turn on or off news notifications for another person, but you can for yourself!\n:mailbox_closed: You have news notifications disabled. To enable them, open your profile with the </profile:1100344392067338261> command and click the \"**News notifications**\" button.",
   "news_enable_success_message": ":white_check_mark: News notifications were successfully enabled!",
   "news_disable_success_message": ":ballot_box_with_check: News notifications were successfully disabled.",
+
+  "help_title": "Help :ring_buoy:",
+  "help_description": "Do you want to play Mafia without extra difficulties? We are here to help you!\n**Mafia Bot** allows you to organize games that are perfect for you, as well as create, edit and use your own roles and end game conditions with Premium. Have a good time!",
+  "help_commands_name": ":keyboard: Commands",
+  "help_commands_value": "</create:1015716817945247794> — create a new game\n</lang:1044351625621405797> — change language\n</profile:1100344392067338261> — view your profile\n</help:1100344392067338262> — you are here ^_^",
+  "help_faq_name": ":question: FAQ",
+  "help_faq_value": ":small_orange_diamond: Can I play for free?\n:small_blue_diamond: Yes, you can join any games and create ones with default roles and end conditions for free. Premium allows you to create, edit and use custom roles and conditions.\n:small_orange_diamond: Who can I play with?\n:small_blue_diamond: Only users on the server with access to the channel where the game is created can join it.\n:small_orange_diamond: What should I do if something goes wrong?\n:small_blue_diamond: Please end the game and create a new one. Also please _message to support_ about what happened with the button below.\n:small_orange_diamond: Are all the players required to have Premium to play with custom stuff?\n:small_blue_diamond: No, only the host needs Premium.",
+  "help_plans_name": ":crystal_ball: Plans for Future Updates",
+  "help_plans_value": "We plan to empower game hosts, extend the user profile, add more actions for roles, custom game stages, new localizations and a lot more!",
+  "help_about_name": ":notepad_spiral: About Mafia Bot",
+  "help_about_value": "`Version:` 2.0.5.\n`Source code:` https://github.com/Pazzann/mafia-bot\n`Official server:` https://discord.gg/ZWnx8rqGTD\n`Development:` Boy From God#2772\n`Text:` denyshon#9143, Boy From God#2772\n`Localization:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Arts:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Game Rules",
   "help_button_scripting": "Scripting",
