--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -54,7 +54,7 @@
   "kills_description_one": "пал жертвой беззакония.",
   "kills_description_many": "пали жертвами беззакония.",
   "no_kills_title": "Никто не погиб!",
-  "no_kills_description": "За минувшую ночь никого не убили! Возможно, стоит отблагодарить доктора?\uD83D\uDE2F",
+  "no_kills_description": "За минувшую ночь никого не убили! Возможно, стоит отблагодарить доктора? \uD83D\uDE2F",
 
   "role_select_error_notFound": ":jigsaw: Игрок не найден!",
   "role_select_error_invalidSelection": ":man_gesturing_no: Недопустимый выбор!",
@@ -284,6 +284,17 @@
   "news_error_noAccess_disabled": ":man_gesturing_no: Вы не можете включать и выключать уведомления о новостях для другого человека, но можете для себя!\n:mailbox_closed: У вас выключены уведомления о новостях. Чтобы включить их, откройте профиль командой </profile:1100344392067338261> и нажмите кнопку «**Уведомления о новостях**».",
   "news_enable_success_message": ":white_check_mark: Уведомления о новостях успешно включены!",
   "news_disable_success_message": ":ballot_box_with_check: Уведомления о новостях успешно выключены.",
+
+  "help_title": "Справка :ring_buoy:",
+  "help_description": "Хотите поиграть в «Мафию» без лишних сложностей? Мы рады вам помочь!\n**Mafia Bot** позволяет организовывать игры, идеально подходящие именно вам, а также создавать, изменять и использовать собственные роли и условия окончания игры с Premium. Желаем хорошо провести время!",
+  "help_commands_name": ":keyboard: Команды",
+  "help_commands_value": "</create:1015716817945247794> — создать новую игру\n</lang:1044351625621405797> — изменить язык\n</profile:1100344392067338261> — просмотреть свой профиль\n</help:1100344392067338262> — вы здесь ^_^",
+  "help_faq_name": ":question: ЧЗВ",
+  "help_faq_value": ":small_orange_diamond: Могу ли я играть бесплатно?\n:small_blue_diamond: Да, вы можете свободно присоединяться к любым играм и создавать свои со стандартными ролями и условиями окончания. Premium позволяет создавать, изменять и использовать собственные роли и условия.\n:small_orange_diamond: С кем я могу играть?\n:small_blue_diamond: Только люди, которые есть на сервере и имеют доступ к каналу, где создаётся игра, могут присоединиться к ней.\n:small_orange_diamond: Что мне делать, если что-то идёт не так?\n:small_blue_diamond: Закончите игру и создайте новую. Также, пожалуйста, _напишите в поддержку_ о том, что произошло, с помощью кнопки ниже.\n:small_orange_diamond: Все ли игроки должны иметь Premium, чтобы играть с нестандартными элементами?\n:small_blue_diamond: Нет, Premium необходим только организатору.",
+  "help_plans_name": ":crystal_ball: Планы на будущие обовления",
+  "help_plans_value": "Мы планируем предоставить больше возможностей организаторам игр, расширить профиль пользователя, добавить больше действий для ролей, кастомизацию этапов игры, новые локализации и многое другое!",
+  "help_about_name": ":notepad_spiral: О Mafia Bot",
+  "help_about_value": "`Версия:` 2.0.5.\n`Исходный код:` https://github.com/Pazzann/mafia-bot\n`Официальный сервер:` https://discord.gg/ZWnx8rqGTD\n`Разработка:` Boy From God#2772\n`Тексты:` denyshon#9143, Boy From God#2772\n`Локализация:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арты:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Правила игры",
   "help_button_scripting": "Создание скриптов",
